k8s/student-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: adityadave29/student-service:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
        livenessProbe:
          tcpSocket:
            port: 8085
          initialDelaySeconds: 40
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8085
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            cpu: "30m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "320Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
