k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: adityadave29/user-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: "50m"
            memory: "192Mi"
          limits:
            cpu: "200m"
            memory: "320Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
